# Google-Mock-Examples

./: README.md
1-cplusplus-mocking-using-google-mock-advanced-m1-exercise-files/MovieManager/: CMakeLists.txt
1-cplusplus-mocking-using-google-mock-advanced-m1-exercise-files/MovieManager/MovieDataDetcherTests/: MetaDataProcessorTests.cpp  stdafx.h
1-cplusplus-mocking-using-google-mock-advanced-m1-exercise-files/MovieManager/MovieDataFetcher/: MetaDataProcessor.cpp  MetaDataProcessor.h  MovieData.cpp  MovieData.h
2-cplusplus-mocking-using-google-mock-advanced-m2-exercise-files/MovieManager/MovieDataDetcherTests/: ApiKey.h  MetaDataProcessorTests.cpp  StringHtmlEncoderTests.cpp  TheMovieDbDataFactoryTests.cpp  main.cpp  stdafx.h
7-cplusplus-mocking-using-google-mock-advanced-m7-exercise-files/MovieManager/: CMakeLists.txt
7-cplusplus-mocking-using-google-mock-advanced-m7-exercise-files/MovieManager/MovieDataDetcherTests/: FakeLogger.h  FakeMovieMetaDataRepository.h  MovieAnalyzerTests.cpp  TheMovieDbDataFactoryTests.cpp  TheMovieDbRepositoryTests.cpp  main.cpp
7-cplusplus-mocking-using-google-mock-advanced-m7-exercise-files/MovieManager/MovieDataFetcher/: DAL.cpp  DAL.h  FileErrorRepository.h  FileNotFoundException.h  Logger.h  MovieAnalyzer.h  MovieData.h  MovieDataFactory.h  NotImplementedException.h  StringHtmlEncoder.h  TheMovieDbDataFactory.cpp  stdafx.h
7-cplusplus-mocking-using-google-mock-advanced-m7-exercise-files/MovieManager/MovieDataFetcherRunner/: stdafx.h
(+58 files in other folders)
